--- a/config.properties
+++ b/config.properties
@@ -1,46 +1,46 @@
 #Initial Input Parameters
 
 # Absolute path to the input file (e.g: /home/myDir/myInputFile.csv)
-input_file = 
+input_file =
 
 # Absolute path to the hotspots output file (e.g: /home/myDir/top_50_HotSpots.txt)
-#hs-output_file = 
+hs-output_file =
 
 # Absolute path to the DBSCAN output file (e.g: /home/myDir/top_50_HotSpots.txt)
-cl-output_file = 
+cl-output_file =
 
-# Columns. Either Names or Integers(Start from 0). 
+# Columns. Either Names or Integers(Start from 0).
 # lon, lat columns are the only mandatory.
-column_id    = 
-column_lon   = 
-column_lat   = 
+column_id    =
+column_lon   =
+column_lat   =
 column_score =
-column_keywords = 
+column_keywords =
 
 #specify other Columns to keep seperated with (,) Other than id, lon, lat, score. E.G: address,name, ...
 #It Keeps All Columns by default.
 other_cols =
 
-# Delimiters. Here you specify all the seperators.
-csv_delimiter  = ;
-keyword_delimiter = ,
+# Delimiters. Here you specify all the seperators. e.g: ,
 
+csv_delimiter  =
+keyword_delimiter =
 
 #Keywords for filtering.
 keywords =
 
+########### HOTSPOTS ##############################################################################################################
 
-# HOTSPOTS          
-
+# Grid Partitioning
 # Cell Width (Longitude, Latitude).
-# If lon lat are projected, eps is in meters(Better accuracy). Otherwise in Degrees. See https://en.wikipedia.org/wiki/Decimal_degrees
-cell-eps = 
+# If lon lat are projected, eps is in meters(Better accuracy). Otherwise Degrees. See https://en.wikipedia.org/wiki/Decimal_degrees
+cell-eps = 0.0005
 
 #Partition Width as an Integer number, denotes k times the cell-width.
 pSize_k = 50
 
 #Top k HotSpots
-hs-top-k = 
+hs-top-k = 100
 
 #Neighbour Cell Weight.
 hs-nb-cell-weight = 1.0
@@ -49,17 +49,19 @@ hs-nb-cell-weight = 1.0
 # It will print (Gi* per Polygon as the average Gi* of all cells in that Polygon), instead of Gi* per Cell.
 hs-print-as-unioncells = false
 
+####################################################################################################################################
 
 # DBSCAN parameters.
-# If lon lat are projected, eps is in meters(Better accuracy!). Otherwise in Degrees. See https://en.wikipedia.org/wiki/Decimal_degrees
-cl-eps = 
-cl-minPts = 
+# If lon lat are projected, eps is in meters(Better accuracy!). Otherwise Degrees. See https://en.wikipedia.org/wiki/Decimal_degrees
+cl-eps= 100
+cl-minPts=10
 
+####################################################################################################################################
 
 #LDA Parameters
 numOfTopics = 5
 
-# CRS Coordinates. What EPSG are currently you are using and what EPSG to Transform to. (Optional)
+# CRS Coordinates. What EPSG you are currently using and what EPSG to Transform to. (Optional)
 # E.G: source_crs = EPSG:4326, target_crs = EPSG:3068
 source_crs =
 target_crs =
