--- a/config.properties
+++ b/config.properties
@@ -29,6 +29,10 @@ keyword_delimiter =
 #Keywords for filtering.
 keywords =
 
+######################################## Notice ###################################################################################
+# cell-eps & cl-eps are either in meters if source_crs and target_crs are specified other than EPSG:4326
+# or in Degrees otherwise: See https://en.wikipedia.org/wiki/Decimal_degrees
+
 ########### HOTSPOTS ##############################################################################################################
 
 # Grid Partitioning
@@ -36,10 +40,10 @@ keywords =
 # If lon lat are projected, eps is in meters(Better accuracy). Otherwise Degrees. See https://en.wikipedia.org/wiki/Decimal_degrees
 cell-eps = 0.0005
 
-#Partition Width as an Integer number, denotes k times the cell-width.
+#Partition Width as an Integer number, denotes k times the cell-width. cell-width = k * cell-eps
 pSize_k = 50
 
-#Top k HotSpots
+#Top k HotSpots (Optional. If Not specified all cells will be evaluated)
 hs-top-k = 100
 
 #Neighbour Cell Weight.
